--- a/My Fisrt App/Base.lproj/Main.storyboard
+++ b/My Fisrt App/Base.lproj/Main.storyboard
@@ -45,6 +45,9 @@
                                 <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
                                     <rect key="frame" x="20" y="430" width="177" height="71"/>
                                 </variation>
+                                <connections>
+                                    <action selector="DecreaseButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4Ez-gN-e4z"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xz7-g0-aJp">
                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
@@ -56,6 +59,9 @@
                                 <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
                                     <rect key="frame" x="197" y="430" width="183" height="71"/>
                                 </variation>
+                                <connections>
+                                    <action selector="IncreaseButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mPq-vi-6F2"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.65552733668976049" blue="0.61610386290613883" alpha="1" colorSpace="calibratedRGB"/>
@@ -76,6 +82,9 @@
                             </mask>
                         </variation>
                     </view>
+                    <connections>
+                        <outlet property="numberLable" destination="90U-C6-yWf" id="3DZ-Om-oOa"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
