--- a/My Fisrt App/Base.lproj/Main.storyboard
+++ b/My Fisrt App/Base.lproj/Main.storyboard
@@ -26,15 +26,6 @@
                                     <rect key="frame" x="123" y="20" width="154" height="90"/>
                                 </variation>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="90U-C6-yWf">
-                                <rect key="frame" x="-42" y="-21" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="300"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                                <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="91" y="92" width="219" height="320"/>
-                                </variation>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="omq-SW-jsr">
                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                 <color key="backgroundColor" red="0.42564101237261776" green="0.80905482583966426" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -63,22 +54,31 @@
                                     <action selector="IncreaseButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mPq-vi-6F2"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="90U-C6-yWf">
+                                <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="200"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="20" y="93" width="360" height="312"/>
+                                </variation>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.65552733668976049" blue="0.61610386290613883" alpha="1" colorSpace="calibratedRGB"/>
                         <variation key="default">
                             <mask key="subviews">
                                 <exclude reference="RWe-7z-ud2"/>
-                                <exclude reference="90U-C6-yWf"/>
                                 <exclude reference="omq-SW-jsr"/>
                                 <exclude reference="Xz7-g0-aJp"/>
+                                <exclude reference="90U-C6-yWf"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
                             <mask key="subviews">
                                 <include reference="RWe-7z-ud2"/>
-                                <include reference="90U-C6-yWf"/>
                                 <include reference="omq-SW-jsr"/>
                                 <include reference="Xz7-g0-aJp"/>
+                                <include reference="90U-C6-yWf"/>
                             </mask>
                         </variation>
                     </view>
@@ -88,6 +88,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1015.5" y="551.25"/>
         </scene>
     </scenes>
 </document>
